# ble-services

./: .editorconfig  .gitignore  README.md  ble-ad-sample-types.yml  ble-dl-sample-types.yml  ble-sample-types-adv-schema.json  ble-sample-types-download-schema.json  ble-sample-types-schema.json  ble-sample-types.yml  ble-service-schema.json  ble-services.yml
.github/workflows/: publish_spec.yml
data_source/: ble-ad-sample-types.yml  ble-dl-sample-types.yml
data_source/schemas/: ble-sample-types-adv-schema.json  ble-sample-types-download-schema.json  ble-service-schema.json
html_spec_builder/: pyproject.toml
html_spec_builder/specification_publisher/: filter.py  main.py
html_spec_builder/static/: overview_page.md  styles.css
html_spec_builder/templates/: ble-specification-template.html  jinja.macros
sensirion-ble/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
sensirion-ble/src/: colors.css  index.css  main.tsx  utils.tsx
sensirion-ble/src/components/: navbar.css  navbar.tsx  overview.css  overview.tsx  sensirionLogo.tsx  services.css  services.tsx
sensirion-ble/src/components/common/: card.css  card.tsx  footer.css  footer.tsx  navbar.tsx  separator.css  separator.tsx
sensirion-ble/src/components/vectors/: chevronIcon.tsx  githubIcon.tsx
sensirion-ble/src/resources/: ble-ad-sample-types.yml  ble-dl-sample-types.yml  ble-services.yml
sensirion-ble/src/types/: ble-sample-types-adv-schema.d.ts  ble-sample-types-download-schema.d.ts  ble-service-schema.d.ts  search-criterias.d.tsx
(+50 files in other folders)
