[tool.poetry]

name = "Ble-Services publisher"
version = "0.1.0"
description = "Tool to generate html docu from the yaml specification"
authors = ["Rolf Laich <rolf.laich@sensirion.com>"]
packages = [{include = "specification_publisher"}]

[tool.poetry.scripts]
build_html = "specification_publisher.main:build_html"

[tool.poetry.dependencies]
python = "^3.10"
docutils = "0.20.1"
Jinja2 = "3.1.3"
PyYAML = "6.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
